--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,11 @@ psycopg2-binary = "*"
 gunicorn = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.11"
 python_full_version = "3.11.1"
+
+[pipenv]
+allow_prereleases = true
