--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -14,7 +14,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+    && apk add postgresql-dev gcc python3-dev musl-dev sudo  --no-cache su-exec
 
 # lint
 RUN pip install --upgrade pip
