--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "==3.2.17"
 psycopg2-binary = "*"
 gunicorn = "*"
 django-markdownx = "*"
+djangorestframework = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 black = "*"
